Actualizar seccion variables

--- a/notebooks/00-sintaxis-basica-y-variables.ipynb
+++ b/notebooks/00-sintaxis-basica-y-variables.ipynb
@@ -604,6 +604,36 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Asignando multiples variables al mismo tiempo\n",
+        "\n",
+        "Si bien no es lo más recomendable, podemos asignar valores a más de una variable al mismo tiempo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "6\n"
+          ]
+        }
+      ],
+      "source": [
+        "a, b = 5, 6\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Tipos de Datos"
       ]
     },
@@ -636,7 +666,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Variable entero(integer)"
+        "### Enteros (int)"
       ]
     },
     {
@@ -671,7 +701,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Variable float"
+        "### Flotantes (float)"
       ]
     },
     {
@@ -706,7 +736,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Tipo variable Complex"
+        "### Complex"
       ]
     },
     {
@@ -1327,6 +1357,46 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Nombres de las variables\n",
+        "\n",
+        "Las variables no pueden tener cualquier nombre. Existen reglas dentro de python, y existen también convenciones adoptadas por la comunidad."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Reglas:\n",
+        "\n",
+        "* Los nombres de las variables deben contener caracteres alfanuméricos (`A...Z`, `a...z`, `0...9`) o el guión bajo (`_`)\n",
+        "\n",
+        "``` python\n",
+        "mensaje_1 = \"hola\" \n",
+        "mensaje_1 = \"chau\" \n",
+        "```\n",
+        "* Otros símbolos (incluido el espacio en blanco) estan prohibidos (`-.,;:$#& ...`)\n",
+        "\n",
+        "\n",
+        "``` python\n",
+        "mi_mensaje = \"hola\" # valido\n",
+        "mi-mensaje = \"chau\" # NO válido\n",
+        "dinero$$$ = 300000 # NO válido\n",
+        "mi mensaje = \"hola como estas\" # los espacios NO son válidos\n",
+        "```\n",
+        "\n",
+        "* El nombre de una variable no puede empezar con un número\n",
+        "\n",
+        "\n",
+        "``` python\n",
+        "1mensaje = \"hola\" # no válido\n",
+        "mensaje1 = \"chau\" # válido\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Variables sensibles a las mayúsculas o minúsculas"
       ]
     },
@@ -1339,7 +1409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -1347,8 +1417,7 @@
           "output_type": "stream",
           "text": [
             "100\n",
-            "200\n",
-            "300\n"
+            "200\n"
           ]
         }
       ],
@@ -1359,10 +1428,16 @@
         "# valor de a\n",
         "print(a)  # 100\n",
         "# Valor de A\n",
-        "print(A)  # 200\n",
+        "print(A)  # 200"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Convenciones\n",
         "\n",
-        "a = a + A\n",
-        "print(a)  # 300"
+        "Estas son recomendaciones a la hora de escribir Python"
       ]
     },
     {
@@ -1376,7 +1451,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Constante es una variable o valor que no cambia, lo que significa que sigue siendo el mismo y no se puede modificar. Pero en el caso de Python, el concepto constante no es aplicable. Por convención, solo podemos usar caracteres en mayúsculas para definir la variable constante si no queremos cambiarla."
+        "Cuando una variable está escrita en mayusculas, por convención se la considera como una constante, es decir que su valor no debería cambiar. Esto no es una regla de Python, sino una recomendación a la hora de escribir en Python"
       ]
     },
     {
@@ -1393,137 +1468,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Reglas y Convenciones de nombres para variables y constantes"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        " Un nombre en un programa Python se llama identificador. Un identificador puede ser un nombre de variable, nombre de clase, nombre de función y nombre de módulo.\n",
+        "### Usar Minúscula y Guiones Bajos\n",
         "\n",
-        "Hay algunas reglas para definir variables en Python.\n",
-        "\n",
-        "En Python, hay algunas convenciones y reglas para definir variables y constantes que se deben seguir.\n",
-        "\n",
-        "* Regla 1: El nombre de la variable y constante debe tener una combinación de letras, dígitos y guión bajo.\n",
-        "\n",
-        "Alfabeto/letras, es decir, minúsculas (a a z) o mayúsculas (A a Z)\n",
-        "Dígitos(0 a 9)\n",
-        "Guión bajo (_)\n",
-        "\n",
-        "Por ejemplo:\n",
-        "* suma_total\n",
-        "* SUMA_TOTAL\n",
-        "* Sumatotal\n",
-        "* SumaTotal"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        " * Regla 2: El nombre de la variable y el nombre  de la constante deben tener sentido.\n",
-        "\n",
-        "Nota: siempre debemos crear un nombre de variable significativo para que sea fácil de entender. Es decir, debería ser significativo.\n",
-        "\n",
-        "Por ejemplo:\n",
-        "x = \"Juan\"  \n",
-        "Nombre_Estudiante = \"Juan\"\n",
-        "\n",
-        "Vemos que la variable x del ejemplo no tiene mucho sentido, pero Nombre_Estudiante es una variable significativa.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* Regla 3: No usar símbolos especiales en un nombre de variable\n",
-        "\n",
-        "¡Para declarar variable y constante, no podemos usar símbolos especiales como $, #, @, %, !~, etc. Si intentamos declarar nombres con un símbolo especial, Python genera un error\n",
-        "\n",
-        "Ejemplo\n",
-        "* Dinero$ = 1000\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* Regla 4: Una Variable o constante no debe comenzar con dígitos.\n",
-        "\n",
-        "Recibirá un error si inicia un nombre de variable con un dígito. Verifiquemos esto usando un ejemplo simple.\n",
-        "\n",
-        "* 1estudiante = \"Juan\"\n",
-        "* print(1estudiante)\n",
-        "* Aquí Python generará un error de sintaxis en 1estudiante. En lugar de esto, puede declarar una variable como Estudiante_1 = \"Juan\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* Regla 5: Identificadores son sensibles a mayúsculas y minúsculas.\n",
-        "\n"
+        "Si bien se puede usar tanto minúsculas como mayusculas para escribir nombres de variables, la recomendación es usar siempre minúsculas y usar guiones bajos para separar las palabras. Esto se conoce como ([ver Snake case](https://es.wikipedia.org/wiki/Snake_case))."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "120\n",
-            "130\n",
-            "150\n"
-          ]
-        }
-      ],
-      "source": [
-        "total = 120\n",
-        "Total = 130\n",
-        "TOTAL = 150\n",
-        "print(total)\n",
-        "print(Total)\n",
-        "print(TOTAL)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* Convención 1:Al declarar constantes debe usar letras mayúsculas.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "MIN_VALOR = 100\n",
-        "MAX_VALOR = 1000"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        " Use un símbolo de guión bajo para separar las palabras en un nombre de variable ([ver Snake case](https://es.wikipedia.org/wiki/Snake_case))\n",
-        "\n",
-        "Si queremos declarar nombres variables y constantes que tengan dos palabras, use un símbolo de guión bajo para separar las palabras."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "mi_variable = \"hola\"\n",
         "temperatura_actual = 24"
       ]
     },
@@ -1531,7 +1487,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* NOTA: no separar los espacios usando mayúsuculas. Esto se conoce como [Camel Case](https://es.wikipedia.org/wiki/Camel_case) y es utilizado en otros lenguajes."
+        "* NOTA: en otros lenguajes es común separar los nombres de las variables usando mayúsuculas. Esto se conoce como [Camel Case](https://es.wikipedia.org/wiki/Camel_case) y lo ideal es no hacerlo al escribir Python."
       ]
     },
     {
@@ -1543,31 +1499,6 @@
         "mi_variable = \"hola\" # Esto esta bien\n",
         "\n",
         "miVariable = \"chau\" # Esto funciona pero no se hace por convención"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Asignando multiples valores a multiples variables\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 39,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "10 7 Juan\n"
-          ]
-        }
-      ],
-      "source": [
-        "vuelta_no, posicion, nombre = 10, 7, \"Juan\"\n",
-        "print(vuelta_no, posicion, nombre) # 10 7 Juan"
       ]
     },
     {
@@ -1600,23 +1531,6 @@
         "print(\"hola mundo\") # Esto ya no funciona, y perdí el print para siempre!\n",
         "# O hasta que reinicie el kernel (el interprete de python)\n",
         "```"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Resumen rápido a tener en cuenta:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Lista de verificación mientras se dan nombres de variables\n",
-        " - Valores permitidos -> alfabetos, números y guiones bajos (_).\n",
-        " un nombre de variable debe comenzar con el alfabeto o el guion bajo. No puede comenzar con un número.\n",
-        " - Los nombres de variables son sensibles a las mayúsculas o minúsculas."
       ]
     },
     {
