--- a/notebooks/00-sintaxis-basica-y-variables.ipynb
+++ b/notebooks/00-sintaxis-basica-y-variables.ipynb
@@ -479,42 +479,13 @@
       "source": [
         "Una variable es un área de memoria reservada (dirección de memoria) para almacenar un valor. Por ejemplo, queremos almacenar el salario de un empleado. En tal caso, podemos crear una variable y almacenar el salario usándola. Usando ese nombre de variable, podemos leer o modificar el monto del salario.\n",
         "\n",
-        "En otras palabras, una variable es un valor que varía según la condición o pase de entrada al programa. Todo en Python se trata como un objeto, por lo que cada variable no es más que un objeto en Python.\n",
-        "\n",
-        "Una variable puede ser mutable o inmutable. Si el valor de variables puede cambiar, el objeto se llama mutable, mientras que si el valor no puede cambiar, el objeto se llama inmutable."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Creando una variable"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "El lenguaje de programación Python se escribe dinámicamente, por lo que no es necesario declarar una variable antes de usarla o declarar el tipo de datos de la variable como en otros lenguajes de programación. La declaración ocurre automáticamente cuando asignamos un valor a la variable."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "##### Creando una variable y asignando un valor\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Podemos asignar un valor a la variable en el momento en que se crea la variable. Podemos usar el operador de asignación = para asignar un valor a una variable.\n",
-        "\n",
-        "El operando, que está en el lado izquierdo del operador de asignación, es un nombre de variable. Y el operando, que es el que está del lado derecho del operador de asignación, es el valor de la variable.\n",
-        "\n",
-        "variable_nombre = variable_valor"
+        "Para crear una variable debemos elegir el nombre de esa variable y asignarle un valor utilizamos el signo igual (`=`):\n",
+        "``` python\n",
+        "# creo una variable\n",
+        "salario_juan = 900000\n",
+        "# utilizo la variable\n",
+        "print(salario_juan)\n",
+        "```"
       ]
     },
     {
@@ -567,37 +538,52 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "10\n",
-            "<class 'int'>\n",
-            "55\n",
-            "Ahora soy string\n",
-            "<class 'str'>\n",
-            "35.69\n",
-            "<class 'float'>\n"
+            "hola\n",
+            "15\n",
+            "17\n",
+            "8.5\n"
           ]
         }
       ],
       "source": [
-        "var = 10\n",
-        "print(var)  # 10\n",
-        "# printear su tipo\n",
-        "print(type(var))  # <class 'int'>\n",
+        "# Creo una variable con el texto \"hola\"\n",
+        "var = \"hola\"\n",
+        "print(var)\n",
         "\n",
-        "# asignar un valor entero diferente a la variable\n",
-        "var = 55\n",
-        "print(var)  # 55\n",
+        "# Cambio el valor de la variable por un número\n",
+        "var = 15\n",
+        "print(var)\n",
         "\n",
-        "# cambiar var a string\n",
-        "var = \"Ahora soy string\"\n",
-        "print(var)  # Ahora soy string\n",
-        "# printear su tipo\n",
-        "print(type(var))  # <class 'str'>\n",
+        "# Sumo 2 al valor anterior\n",
+        "var = var + 2\n",
+        "print(var)\n",
         "\n",
-        "# cambiar var a flotante\n",
-        "var = 35.69\n",
-        "print(var)  # 35.69\n",
-        "# printear su tipo\n",
-        "print(type(var))  # <class 'float'>"
+        "# Divido el valor anterior en 2\n",
+        "var = var / 2\n",
+        "print(var)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Noten que puedo usar el valor actual de una variable para darle uno nuevo, basado en el anterior.\n",
+        "\n",
+        "``` python\n",
+        "variable = variable + 1 # sumo 1 al valor anterior\n",
+        "variable = variable - 1 # resto 1 al valor anterior\n",
+        "variable = variable * 2 # multiplico por 2 el valor anterior\n",
+        "variable = variable / 2 # divido por 2 el valor anterior\n",
+        "```\n",
+        "\n",
+        "Estas operaciones son tan conmunes que se pueden realizar se la siguiente manera:\n",
+        "\n",
+        "``` python\n",
+        "variable += 1 # sumo 1 al valor anterior\n",
+        "variable -= 1 # resto 1 al valor anterior\n",
+        "variable *= 2 # multiplico por 2 el valor anterior\n",
+        "variable /= 2 # divido por 2 el valor anterior\n",
+        "```"
       ]
     },
     {
@@ -611,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -666,7 +652,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Enteros (int)"
+        "#### Enteros (int)"
       ]
     },
     {
@@ -701,7 +687,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Flotantes (float)"
+        "#### Flotantes (float)"
       ]
     },
     {
@@ -736,7 +722,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Complex"
+        "#### Complex"
       ]
     },
     {
