Arreglar typo notebook 0

--- a/notebooks/00-sintaxis-basica-y-variables.ipynb
+++ b/notebooks/00-sintaxis-basica-y-variables.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Python \n",
         "\n",
-        "Vamos a trabajar con el formato de _notebooks_ en el cual se puede escribir pequeñas porciones (llamdas _celdas_) de código y ejecutarlas individualmente.\n",
+        "Vamos a trabajar con el formato de _notebooks_ en el cual se puede escribir pequeñas porciones (llamadas _celdas_) de código y ejecutarlas individualmente.\n",
         "\n",
         "Un programa escrito en Python tiene su extensión caracteristica _.py_:\n",
         "\n",
