--- a/notebooks/04-listas.ipynb
+++ b/notebooks/04-listas.ipynb
@@ -374,26 +374,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m cadena \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSoy una cadena\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Ahora utilice la notación de corchetes para intentar cambiar un elemento\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m cadena[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# EJERCICIO\n",
     "\n",
     "cadena = \"Soy una cadena\"\n",
     "\n",
-    "# Ahora utilice la notación de corchetes para intentar cambiar un elemento\n",
-    "cadena[0] = \"A\"  # Esto da error"
+    "# Utilice la notación de corchetes para intentar cambiar un elemento:\n",
+    "# cadena[0] = \"A\"  # Esto da ERROR!"
    ]
   },
   {
