Agregar cuarta semana

--- a/notebooks/06-bucles.ipynb
+++ b/notebooks/06-bucles.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "4QOcfn7lGvTd",
     "outputId": "f779eebb-1351-4351-f619-68e0164cc96c"
@@ -35,7 +35,7 @@
    ],
    "source": [
     "# Factorial de 5:\n",
-    "fac_5 = 5*4*3*2*1\n",
+    "fac_5 = 5 * 4 * 3 * 2 * 1\n",
     "\n",
     "print(f\"5! = {fac_5}\")"
    ]
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "ZS4Bvi5oGvTx",
     "outputId": "0b9531fd-bd93-44f0-e1a5-5771a8e9e841"
@@ -104,7 +104,7 @@
     "edad = 0\n",
     "while edad < 5:\n",
     "    print(f\"Tengo {edad} años\")\n",
-    "    edad += 1 # pasa un año\n",
+    "    edad += 1  # pasa un año\n",
     "\n",
     "print(\"Fuera del bloque\")"
    ]
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "I99l3v0SGvTz",
     "outputId": "a6e9075a-e5fa-49e4-e6f5-9072deb1f78d"
@@ -153,7 +153,7 @@
    "source": [
     "lista_de_compras = [\"queso\", \"pan\", \"jamón\", \"arroz\"]\n",
     "\n",
-    "indice = 0 # el primer elemento de la lista siempre es el cero\n",
+    "indice = 0  # el primer elemento de la lista siempre es el cero\n",
     "while indice < len(lista_de_compras):\n",
     "    print(f\"Tengo que comprar {lista_de_compras[indice]}\")\n",
     "    indice += 1  # importante actualizar el índice en cada iteración"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "MqW6xxTWGvT0",
     "outputId": "0767ceb3-33cd-4bdd-9a7e-6039490f70ed"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "7XIC2LXJGvT1",
     "outputId": "2fc7d9e5-d3b6-47ee-9635-b31e68825ab6"
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "pdelrzRNGvT1",
     "outputId": "e835ca8f-1b9e-449b-c44b-8efdb9a3db2d"
@@ -309,7 +309,7 @@
    ],
    "source": [
     "# veamos que pasa con la variable i:\n",
-    "for i in range(10): \n",
+    "for i in range(10):\n",
     "    print(i)"
    ]
   },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "o5S3TEoXGvT3",
     "outputId": "4ae9f146-3f20-4c3d-bb46-bbd5d5a621fd"
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "Dk9bIYx9GvT4",
     "outputId": "409bea25-e2c2-431e-d04c-acfee033d128"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "1Y0IkMWFGvT5",
     "outputId": "d3cdbf69-763e-4221-88a0-38a8a5d994c6"
@@ -420,13 +420,14 @@
       "3\n",
       "2\n",
       "1\n",
+      "0\n",
       "¡¡BOOM!!\n"
      ]
     }
    ],
    "source": [
     "# Podemos hacer una cuenta regresiva de esta forma:\n",
-    "for i in range(5, 0, -1):\n",
+    "for i in range(5, -1, -1):\n",
     "    print(i)\n",
     "\n",
     "print(\"¡¡BOOM!!\")"
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "_o6e6NAdGvT6",
     "outputId": "b791a27d-1de1-41c6-9912-ad5ed61c9c68"
@@ -453,13 +454,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Factorial de 5 = 120\n"
+      "Factorial de 50 = 30414093201713378043612608166064768844377641568960512000000000000\n"
      ]
     }
    ],
    "source": [
     "# Queremos calcular n!\n",
-    "n = 5\n",
+    "n = 50\n",
     "factorial = n\n",
     "\n",
     "for i in range(1, n):\n",
@@ -493,7 +494,7 @@
     }
    ],
    "source": [
-    "diccionario = {\"a\" : 10, \"b\": 11, \"c\": 12}\n",
+    "diccionario = {\"a\": 10, \"b\": 11, \"c\": 12}\n",
     "\n",
     "# Si usamos un for, solo recorreremos las llaves\n",
     "for llave in diccionario:\n",
@@ -516,7 +517,7 @@
     }
    ],
    "source": [
-    "diccionario = {\"a\" : 10, \"b\": 11, \"c\": 12}\n",
+    "diccionario = {\"a\": 10, \"b\": 11, \"c\": 12}\n",
     "\n",
     "# Si usamos un for, solo recorreremos las llaves\n",
     "for llave in diccionario:\n",
@@ -540,7 +541,7 @@
     }
    ],
    "source": [
-    "diccionario = {\"a\" : 0, \"b\": 1, \"c\": 2}\n",
+    "diccionario = {\"a\": 0, \"b\": 1, \"c\": 2}\n",
     "\n",
     "# Podemos usar el método .items() para ver valores y llaves al mismo tiempo\n",
     "for llave, valor in diccionario.items():\n",
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "VBmfN4yOGvT7",
     "outputId": "7a70cf45-ce54-4719-8dcc-e5d5268be178"
@@ -586,7 +587,7 @@
    "source": [
     "# Imprimiendo solo números impares menores a 10:\n",
     "for i in range(100):\n",
-    "    if i%2 == 0:\n",
+    "    if i % 2 == 0:\n",
     "        # si i es par salto a la siguiente iteración\n",
     "        continue\n",
     "    if i > 10:\n",
@@ -598,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -616,17 +617,22 @@
    ],
    "source": [
     "# un diccionario que nos dice que personas ya recibieron su sueldo\n",
-    "sueldos_pagados = {\"Torres\" : True, \"Pereira\": False, \"Villegas\": False, \"Contreras\": True}\n",
+    "sueldos_pagados = {\n",
+    "    \"Torres\": True,\n",
+    "    \"Pereira\": False,\n",
+    "    \"Villegas\": False,\n",
+    "    \"Contreras\": True,\n",
+    "}\n",
     "\n",
     "for apellido, sueldo_pagado in sueldos_pagados.items():\n",
     "    if sueldo_pagado:\n",
     "        print(f\"{apellido} ya recibió su pago\")\n",
     "        # Si el pago fue recibido continuamos con el siguiente\n",
-    "        continue \n",
+    "        continue\n",
     "\n",
     "    print(f\"Enviando el pago de {apellido}\")\n",
     "\n",
-    "print(\"\\nTodos los sueldos fueron pagados!\")\n"
+    "print(\"\\nTodos los sueldos fueron pagados!\")"
    ]
   },
   {
