Actualizar notebook clases

--- a/notebooks/09-clases.ipynb
+++ b/notebooks/09-clases.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,8 @@
     "        self.nombre = nombre\n",
     "        self.apellido = apellido\n",
     "        self.edad = edad\n",
-    "    \n",
+    "\n",
+    "\n",
     "blas = Persona(\"Blas\", \"de haro\", 23)\n",
     "flor = Persona(\"Florencia\", \"Peña\", 40)\n",
     "\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +98,7 @@
     "    def __init__(self, nombre, apellido, edad):\n",
     "        self.nombre = nombre\n",
     "        self.apellido = apellido\n",
-    "        self.edad = edad \n",
+    "        self.edad = edad\n",
     "\n",
     "\n",
     "# creo dos personas:\n",
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +155,12 @@
     "    def __init__(self, nombre, apellido, edad):\n",
     "        self.nombre = nombre\n",
     "        self.apellido = apellido\n",
-    "        self.edad = edad \n",
+    "        self.edad = edad\n",
     "\n",
     "    def presentarse(self):\n",
     "        # notar que para acceder a los atributos usamos self:\n",
     "        print(f\"Hola! soy {self.nombre} {self.apellido} y tengo {self.edad} años\")\n",
+    "\n",
     "\n",
     "# creo dos personas:\n",
     "jorge = Persona(\"Jorge\", \"Garcia\", 28)\n",
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,10 +217,10 @@
    ],
    "source": [
     "class PersonaTimida(Persona):\n",
-    "    def presentarse(self): # sobreescribo el método original\n",
+    "    def presentarse(self):  # sobreescribo el método original\n",
     "        print(f\"hola, soy {self.nombre}.\")\n",
     "\n",
-    "    def escapar_de_la_conversacion(self): # nuevo método\n",
+    "    def escapar_de_la_conversacion(self):  # nuevo método\n",
     "        print(f\"{self.nombre} escapa de la conversación en silencio.\")\n",
     "\n",
     "\n",
@@ -228,7 +230,7 @@
     "# ambas personas pueden presentarse, pero su implementación es diferente\n",
     "ana.presentarse()\n",
     "jose.presentarse()\n",
-    "jose.escapar_de_la_conversacion() # este método solo existe para las personas tímidas"
+    "jose.escapar_de_la_conversacion()  # este método solo existe para las personas tímidas"
    ]
   },
   {
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -256,13 +258,13 @@
    ],
    "source": [
     "class Alumno(Persona):\n",
-    "    def __init__(self, nombre, apellido, edad, materias_aprobadas = []):\n",
+    "    def __init__(self, nombre, apellido, edad, materias_aprobadas=[]):\n",
     "        # pasamos los atributos de la super clase (Persona) usando super():\n",
     "        super().__init__(nombre, apellido, edad)\n",
-    "        \n",
+    "\n",
     "        # definimos el nuevo atributo:\n",
     "        self.materias_aprobadas = materias_aprobadas\n",
-    "    \n",
+    "\n",
     "    # nuevo Método\n",
     "    def aprobar_materia(self, materia):\n",
     "        self.materias_aprobadas.append(materia)\n",
@@ -323,29 +325,32 @@
    "source": [
     "from math import pi\n",
     "\n",
+    "\n",
     "class Cuadrado:\n",
     "    def __init__(self, lado):\n",
     "        self.lado = lado\n",
     "\n",
     "    def calcular_area(self):\n",
-    "        return self.lado ** 2\n",
-    "    \n",
+    "        return self.lado**2\n",
+    "\n",
+    "\n",
     "class Circulo:\n",
     "    def __init__(self, radio):\n",
-    "        self.radio = radio \n",
+    "        self.radio = radio\n",
     "\n",
     "    def calcular_area(self):\n",
     "        return pi * self.radio**2\n",
-    "    \n",
+    "\n",
+    "\n",
     "class Rectangulo:\n",
     "    def __init__(self, base, altura):\n",
     "        self.base = base\n",
-    "        self.altura = altura \n",
-    "    \n",
+    "        self.altura = altura\n",
+    "\n",
     "    def calcular_area(self):\n",
     "        return self.base * self.altura\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "cuadrado = Cuadrado(lado=2)\n",
     "circulo = Circulo(radio=1)\n",
     "rectangulo = Rectangulo(2, 5)\n",
@@ -360,32 +365,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Ejercicio.\n",
+    "### Ejercicio entre todos\n",
     "\n",
-    "# Clase Persona con nombre, apellido, DNI y sexo\n",
-    "# Méotodo cuil() para una Persona a partir del DNI\n",
-    "# Agrega 23 - 9 en caso de ser hombre\n",
-    "# Agrega 27 - 4 en caso de ser mujer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'HOLA'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"hola\".upper()"
+    "# BilleteraVirtual con Gastos e Ingresos\n",
+    "# Métodos gastar(), ingresar()\n",
+    "# Método ver_saldo()"
    ]
   },
   {
@@ -394,15 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Ejercicio entre todos\n",
-    "\n",
-    "# BilleteraVirtual con Gastos e Ingresos\n",
-    "# Métodos gastar(), ingresar()\n",
-    "# Método ver_saldo()\n",
-    "\n",
-    "\n",
     "class BilleteraVirtual:\n",
-    "    def __init__(self, saldo_inicial = 0):\n",
+    "    def __init__(self, saldo_inicial=0):\n",
     "        self.saldo_inicial = saldo_inicial\n",
     "        self.gastos = []\n",
     "        self.ingresos = []\n",
@@ -414,8 +391,7 @@
     "        self.ingresos.append(monto)\n",
     "\n",
     "    def ver_saldo(self):\n",
-    "        return self.saldo_inicial + sum(self.ingresos) - sum(self.gastos)\n",
-    "\n"
+    "        return self.saldo_inicial + sum(self.ingresos) - sum(self.gastos)"
    ]
   },
   {
@@ -431,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,26 +430,27 @@
     "\n",
     "    def gastar(self, gasto):\n",
     "        self.gastos.append(gasto)\n",
-    "    \n",
+    "\n",
     "    def ingresar(self, ingreso):\n",
     "        self.ingresos.append(ingreso)\n",
     "\n",
+    "    # deja de ser una función, y pasa a ser un atributo (o propiedad)\n",
     "    @property\n",
     "    def saldo(self):\n",
     "        return self.saldo_inicial + sum(self.ingresos) - sum(self.gastos)\n",
-    "    \n",
+    "\n",
     "\n",
     "billetera = BilleteraVirtual()\n",
     "billetera.ingresar(100)\n",
     "billetera.ingresar(200)\n",
     "billetera.gastar(50)\n",
     "\n",
-    "billetera.saldo"
+    "billetera.saldo  # no tengo que usar paréntesis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -489,12 +466,11 @@
    ],
    "source": [
     "class Persona:\n",
-    "    def __init__(self, nombre, apellido, edad, billetera = None):\n",
-    "        self.nombre = nombre \n",
-    "        self.apellido = apellido \n",
-    "        self.edad = edad \n",
+    "    def __init__(self, nombre, apellido, edad, billetera=None):\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido\n",
+    "        self.edad = edad\n",
     "        self.billetera = billetera\n",
-    "\n",
     "\n",
     "\n",
     "billetera = BilleteraVirtual()\n",
